K8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: festivalsync
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.festivalsync
      http:
        paths:
          - path: /artists
            pathType: Prefix
            backend:
              service:
                name: artist-service
                port:
                  number: 8081
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 8082
          - path: /tickets
            pathType: Prefix
            backend:
              service:
                name: ticket-service
                port:
                  number: 8083
